fixe percentages on mobile

--- a/app/assets/stylesheets/responses.scss
+++ b/app/assets/stylesheets/responses.scss
@@ -7,7 +7,7 @@
   .card-text {
     font-size:32px;
     padding-bottom:2rem;
-    line-height: 2rem;
+    line-height: 2.25rem;
   }
   .percent-text{
     font-size: 25px;
@@ -123,6 +123,7 @@
     }
     p.percent-text{
       padding-top:1rem;
+      font-size:18px;
     }
   } 
 }
